--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -64,11 +64,11 @@
             "detail": "Deploy dev plugin to deck",
             "type": "shell",
             "group": "none",
-            "dependsOn": [
-                "createfolders",
-                "chmodfolders"
-            ],
-            "command": "rsync -azp --delete --chmod=D0755,F0755 --rsh='ssh -p ${config:deckport} ${config:deckkey}' --exclude='.git/' --exclude='.github/' --exclude='.vscode/' --exclude='node_modules/' --exclude='src/' --exclude='*.log' --exclude='.gitignore' . deck@${config:deckip}:${config:deckdir}/homebrew/plugins/${workspaceFolderBasename}",
+            // "dependsOn": [
+            //     "createfolders",
+            //     "chmodfolders"
+            // ],
+            "command": "rsync -azp --delete --progress --chmod=D0755,F0755 --exclude='.git/' --exclude='.github/' --exclude='.vscode/' --exclude='node_modules/' --exclude='src/' --exclude='*.log' --exclude='.gitignore' . deck@${config:deckip}:${config:deckdir}/homebrew/plugins/${workspaceFolderBasename}",
             "problemMatcher": []
         },
         {
@@ -85,7 +85,7 @@
             "group": "none",
             "dependsOn": [
                 "deploy",
-                "chmodfolders"
+                // "chmodfolders"
             ],
             "problemMatcher": []
         },
